@@ -1,0 +1,15 @@
+bggId: 853
+authors: Martin Wallace
+type:
+  - Auction
+  - Player Elimination
+players: 4, 5, 6
+cards:
+  Base:
+    all-players:
+      stars: 1-15, J, K*3
+      spades: 1-15, J, K
+      hearts: 1-15, J, K
+      clubs: 1-15, J, K
+      diamonds: 1-15, J, K
+      florettes: 1-15, J, K
